Revert to depricated `Thread.getId()`, because servers uses 11 version of JAVA and `Thread.threadId()` arrears since 19 version;